Fixed alignment issues, updated gauge coloring, still having gauge fill bug

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -96,7 +96,7 @@
 
 
 .demo-grid {
-  width: 100vw;
+  width: 100%;
   overflow: hidden;
   /* Display items in rows of two */
   display: grid;
@@ -107,7 +107,7 @@
 }
 
 .demo-section {
-  width: 90%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -117,9 +117,14 @@
   justify-self: center;
 }
 
+.line-chart-container {
+  width: 50%;
+}
+
 #compact {
-  max-width: 43%;
+  width: 43%;
   margin: 0 1vw 0 1vw;
+  padding: 1vw 3vw 1vw 3vw;
 }
 
 .demo-section h1 {
@@ -148,8 +153,18 @@
   }
 
   .demo-section {
-    width: 50%;
+    width: 80%;
     align-items: center;
+  }
+
+  #compact {
+    width: 80%;
+    margin: 0 1vw 0 1vw;
+    padding: 1vw 3vw 1vw 3vw;
+  }
+
+  .line-chart-container {
+    width: 100%;
   }
 
   .demo-section-widgets {
